Changing weather icon

--- a/Interface/resource.qrc
+++ b/Interface/resource.qrc
@@ -1,14 +1,11 @@
 <RCC>
     <qresource prefix="/">
-        <file alias="grellon">Hail_Heavy.png</file>
-        <file>Night_Rain.png</file>
-        <file>Overcast.png</file>
-        <file alias="neigePluie">Sleet.png</file>
-        <file alias="sunPluie">Snow_Occasional.png</file>
-        <file alias="sun">Sunny.png</file>
-        <file alias="leverSoleil">Sunrise.png</file>
-        <file alias="neige">Thermometer_Snowflake.png</file>
-        <file alias="vent">Wind_Flag_Storm.png</file>
-        <file alias="sunCloud">sun_cloud.png</file>
+        <file alias="fog">frog.png</file>
+        <file alias="neige">neige.png</file>
+        <file alias="orage">orage.png</file>
+        <file alias="pluie">pluie2.png</file>
+        <file alias="soleil">soleil.png</file>
+        <file alias="soleilCloud">soleil_nuage.png</file>
+        <file alias="nuage">nuage.png</file>
     </qresource>
 </RCC>
